# loan-advisor-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  interactive_client.py  models.py  openenv.yaml  pyproject.toml  validate-submission.sh
server/: app.py  environment.py  requirements.txt
tests/: test_environment.py
